--- a/portalAccountRegister.html
+++ b/portalAccountRegister.html
@@ -153,7 +153,7 @@
                 })
                 if(response.status == 200){
                     alert("ACCOUNT CREATED, CLICK OK TO LOGIN")           
-                    window.location.href = "portal.html"  
+                    window.location.href = "portalLogin.html"  
                 }else{
                     return alert("error in crete account")
                 }
