--- a/portalLogin.html
+++ b/portalLogin.html
@@ -99,7 +99,7 @@
                 <button onclick="login()" id="singIn">
                     <span style="color:#FFFFFF; font-weight: bold;">LOGIN</span>
                 </button>
-                <span id="newAccount" style="font-weight: bold;">New around here? <a href="portalAccount.html" style="color: rgb(255, 255, 255); font-weight: bold;">Create an account</a></span>
+                <span id="newAccount" style="font-weight: bold;">New around here? <a href="portalAccountRegister.html" style="color: rgb(255, 255, 255); font-weight: bold;">Create an account</a></span>
             </div>                          
         </div>
         <script>
@@ -123,7 +123,7 @@
              
                 if(response.status === 202){
                     localStorage.setItem("employee", await JSON.stringify(await response.json()))
-                    window.location.href = "portalRequests.html"
+                    window.location.href = "portalServiceDeskViewAllRequests.html"
                 }else if(response.status === 403){
                     alert("wrong password")
                 }else if(response.status === 404){
