--- a/portalNewRequest.html
+++ b/portalNewRequest.html
@@ -128,8 +128,8 @@
                 <img width="40px" src="./bruceWaynePerson.jpg">
             </div>
             <div style="display: none" id="modalx">
-                <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalBadge.html" ><div class="item">Badge</div></a>
-                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalPayLotPdf.html"><div class="item">Money</div></a>
+                <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalAccountBadge.html" ><div class="item">Badge</div></a>
+                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalAccountPayLotPdf.html"><div class="item">Money</div></a>
                 <a onclick="logout()" style= "text-decoration: none; color: black; font-weight: bold;" ><div class="item">Logout</div></a>
             </div>
             <span  id="name" style="color:#FFFFFF; font-size:25px; margin-left: 10px;">Bruce Wayne</span>
@@ -162,11 +162,11 @@
             const nameElement = document.getElementById("name")
             nameElement.textContent = employee.name
         }else{
-            document.location.href = "portal.html"
+            document.location.href = "portalLogin.html"
         }
         function logout(){
             localStorage.removeItem("employee")
-            document.location.href = "portal.html"
+            document.location.href = "portalLogin.html"
         }
         function showModal(){
                 const modal = document.getElementById("modalx")
@@ -198,7 +198,7 @@
                 })
                 if(response.status == 200){
                     alert("REQUEST CREATE")           
-                    window.location.href = "portalRequests.html"
+                    window.location.href = "portalServiceDeskViewAllRequests.html"
                   
                 }else{
                     return alert("error in crete REQUEST")
