--- a/portalServiceDeskViewAllRequests.html
+++ b/portalServiceDeskViewAllRequests.html
@@ -91,8 +91,8 @@
                 <img width="40px" src="./bruceWaynePerson.jpg">
             </div>
             <div style="display: none" id="modalx">
-                <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalBadge.html" ><div class="item">Badge</div></a>
-                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalPayLotPdf.html"><div class="item">Money</div></a>
+                <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalAccountBadge.html" ><div class="item">Badge</div></a>
+                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalAccountPayLotPdf.html"><div class="item">Money</div></a>
                 <a onclick="logout()" style= "text-decoration: none; color: black; font-weight: bold;" ><div class="item">Logout</div></a>
             </div>
             <span id="name" style="color:#FFFFFF; font-size:25px; margin-left: 10px; font-weight: bold;"></span>
@@ -122,7 +122,7 @@
         <script>
             function logout(){
                 localStorage.removeItem("employee")
-                document.location.href = "portal.html"
+                document.location.href = "portalLogin.html"
             }
             function showModal(){
                 const modal = document.getElementById("modalx")
@@ -140,7 +140,7 @@
                     var tr = document.createElement("tr")
                     tr.onclick = () => {
                         localStorage.setItem("requestToView", JSON.stringify(request))
-                        document.location.href = "portalViewRequest.html"
+                        document.location.href = "portalServiceDeskViewRequest.html"
                     }
                     var thID = document.createElement("th")
                     thID.innerHTML = request.id
@@ -178,7 +178,7 @@
                 nameElement.textContent = employee.name
                 setRequests()
             }else{
-                document.location.href = "portal.html"
+                document.location.href = "portalLogin.html"
             }
         </script>
     </body>
