--- a/portalAccountBadge.html
+++ b/portalAccountBadge.html
@@ -172,7 +172,7 @@
     <body>
         <div class="header">
             <div onclick="showModal()" class="imageProfile">
-                <img width="40px" src="./bruceWaynePerson.jpg">
+                <img width="40px" src="./img/bruceWaynePerson.jpg">
             </div>
             <div style="display: none" id="modalx">
                 <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalAccountBadge.html" ><div class="item">Badge</div></a>
@@ -185,7 +185,7 @@
             <div class="badges">
                 <div class="frontBadge">
                     <div class="imgPerson">
-                        <img width="100%" height="100%" style="border-radius: 8px;" src="./bruceWaynePerson.jpg"/>
+                        <img width="100%" height="100%" style="border-radius: 8px;" src="./img/bruceWaynePerson.jpg"/>
                     </div>
                     <div class="informations">
                         <span style="font-weight: bold; font-weight: bold;" ><li> <span id="nameBadgeFront">BRUCE WAYNE </span></li></span>
