--- a/portalNewRequest.html
+++ b/portalNewRequest.html
@@ -125,7 +125,7 @@
     <body>
         <div class="header">
             <div onclick="showModal()" class="imageProfile">
-                <img width="40px" src="./bruceWaynePerson.jpg">
+                <img width="40px" src="./img/bruceWaynePerson.jpg">
             </div>
             <div style="display: none" id="modalx">
                 <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalAccountBadge.html" ><div class="item">Badge</div></a>
