--- a/portalAccountBadge.html
+++ b/portalAccountBadge.html
@@ -14,7 +14,7 @@
                 flex-direction: row;
                 flex-wrap: wrap;
                 background-color: #E9E9E9;
-                height: 93%;
+                height: 90%;
                 width: 100%;
             }
             .header{
@@ -22,7 +22,7 @@
                 justify-content: flex-start;
                 align-items: center;
                 background-color:#1f1f1f ;
-                height: 7%;
+                height: 10%;
                 width: 100%;
             }
             .imageProfile{
@@ -178,6 +178,7 @@
                 <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalAccountBadge.html" ><div class="item">Badge</div></a>
                 <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalAccountPayLotPdf.html"><div class="item">Money</div></a>
                 <a onclick="logout()" style= "text-decoration: none; color: black; font-weight: bold;" ><div class="item">Logout</div></a>
+                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalServiceDeskViewAllRequests.html"><div class="item">Servise Desk</div></a>
             </div>
                 <span id="name" style="color:#FFFFFF; font-size:25px; margin-left: 10px; font-weight: bold;">Bruce Wayne</span>
         </div>
