fixing the indentation

--- a/portalAccountPayLotPdf.html
+++ b/portalAccountPayLotPdf.html
@@ -76,7 +76,7 @@
                 margin: 5px;
                 text-align: center;
                 font-size: 1em;
-            } 
+            }
         </style>
     </head>
     <body>
@@ -89,13 +89,19 @@
                 <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalAccountBadge.html" ><div class="item">Badge</div></a>
                 <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalAccountPayLotPdf.html"><div class="item">Money</div></a>
                 <a onclick="logout()" style= "text-decoration: none; color: black; font-weight: bold;" ><div class="item">Logout</div></a>
-                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalServiceDeskViewAllRequests.html"><div class="item">Servise Desk</div></a>
+                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalServiceDeskViewAllRequests.html"><div class="item">Service Desk</div></a>
             </div>
             <span id="name" style="color:#FFFFFF; font-size:25px; margin-left: 10px; font-weight: bold;">Bruce Wayne</span>
             </div>
         </div>
         <div class="containerx">
             <div id="payLot"> 
+                <p style="margin-left: 15px; font-weight: bold;">NAME:</p>
+                <P style="margin-left: 15px; font-weight: bold;">SECTOR:</P>
+                <P style="margin-left: 15px; font-weight: bold;">MONTHLY HOURS:</P>
+                <P style="margin-left: 15px; font-weight: bold;">HOURS BANKS:</P>
+                <P style="margin-left: 15px; font-weight: bold;">DISCOUNT ON THE HOURS BANK:</P>
+                <P style="margin-left: 15px; font-weight: bold;">REMUNERATION:</P>
             </div>
             <button onclick="printOut()" class="printOut">
                 <span  value="print"  style="color:black; font-weight: bold;">PRINT OUT</span>
@@ -124,8 +130,8 @@
             function printOut(){
                 const employeeJSON = localStorage.employee
                 const employee = JSON.parse(employeeJSON)
-                var getPayLot = document.getElementById('payLot').innerHTML;
 
+                var getPayLot = document.getElementById('payLot').innerHTML;
                 var open = window.open('','','widht=400,height=600');
                 
                 open.document.write(`NAME: ${employee.name}`);
@@ -142,6 +148,5 @@
                 open.document.close();
                 open.print()
             }
-            
     </script>
 </html>
