--- a/portalAccountRegister.html
+++ b/portalAccountRegister.html
@@ -116,10 +116,10 @@
                     <option selected>Select the sector of user</option>
                     <option value="1">T.I</option>
                     <option value="2">RH</option>
-                    <option value="3">Administrativo</option>
+                    <option value="3">ADMINISTRATIVO</option>
                 </select>
                 <button onclick="register()" id="singIn">
-                    <span style="color:#FFFFFF;  font-weight: bold; ">SING IN</span>
+                    <span style="color:#FFFFFF;  font-weight: bold;">SING IN</span>
                 </button>
             </div>                          
         </div>
