--- a/portalServiceDeskViewRequest.html
+++ b/portalServiceDeskViewRequest.html
@@ -109,7 +109,7 @@
                 <a style= "text-decoration: none; color: black; font-weight: bold;"  href="portalAccountBadge.html" ><div class="item">Badge</div></a>
                 <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalAccountPayLotPdf.html"><div class="item">Money</div></a>
                 <a onclick="logout()" style= "text-decoration: none; color: black; font-weight: bold;" ><div class="item">Logout</div></a>
-                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalServiceDeskViewAllRequests.html"><div class="item">Servise Desk</div></a>
+                <a style= "text-decoration: none; color: black; font-weight: bold;" href="portalServiceDeskViewAllRequests.html"><div class="item">Service Desk</div></a>
             </div>
             <span  id="name" style="color:#FFFFFF; font-size:25px; margin-left: 10px;">Bruce Wayne</span>
         </div>  
